src/objects/ID_Card__c.object
<CustomObject>
    <description>ID Cards information
two record types:
1- AIMS (default) contains AIMS data (SFDC is the master data)
2- WebStar contains WebStar data (WebStar is master data)</description>
    <fields>
        <fullName>ASF_Completed_Travel_Courses__c</fullName>
        <description>Have you completed Travel Courses in your career?</description>
        <inlineHelpText>Have you completed Travel Courses in your career?</inlineHelpText>
        <label>Completed Travel Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Airline Training Program</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <label>Hotel/Resort Training Program</label>
                </value>
                <value>
                    <fullName>CT</fullName>
                    <label>Cruise Training Program</label>
                </value>
                <value>
                    <fullName>GT</fullName>
                    <label>GDS Training Program</label>
                </value>
                <value>
                    <fullName>DT</fullName>
                    <label>Destination Training Program</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Current_Function__c</fullName>
        <description>What is your current function in your Agency?</description>
        <inlineHelpText>What is your current function in your Agency?</inlineHelpText>
        <label>Current Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AF1</fullName>
                    <label>Booking Agent</label>
                </value>
                <value>
                    <fullName>AF2</fullName>
                    <label>Online Sales</label>
                </value>
                <value>
                    <fullName>AF3</fullName>
                    <label>Administration (IT, Finance...)</label>
                </value>
                <value>
                    <fullName>AF4</fullName>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>AF5</fullName>
                    <label>Meeting planner</label>
                </value>
                <value>
                    <fullName>AF6</fullName>
                    <label>Sales Leisure</label>
                </value>
                <value>
                    <fullName>AF7</fullName>
                    <label>Sales Corporate</label>
                </value>
                <value>
                    <fullName>AF8</fullName>
                    <label>Ticketing</label>
                </value>
                <value>
                    <fullName>AF9</fullName>
                    <label>General Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_FAM_Trips__c</fullName>
        <description>How often do you participate to FAM Trips?</description>
        <inlineHelpText>How often do you participate to FAM Trips?</inlineHelpText>
        <label>FAM Trips</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>FT1</fullName>
                    <label>Multiple times a year</label>
                </value>
                <value>
                    <fullName>FT2</fullName>
                    <label>Once per year</label>
                </value>
                <value>
                    <fullName>FT3</fullName>
                    <label>Once every 2 years</label>
                </value>
                <value>
                    <fullName>FT4</fullName>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Last_Completed_Travel_Course__c</fullName>
        <description>When was the last time you completed a Travel Course?</description>
        <inlineHelpText>When was the last time you completed a Travel Course?</inlineHelpText>
        <label>Last Completed Travel Course</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TC1</fullName>
                    <label>Less than 1 year ago</label>
                </value>
                <value>
                    <fullName>TC2</fullName>
                    <label>Less than 2 years ago</label>
                </value>
                <value>
                    <fullName>TC3</fullName>
                    <label>Less than 5 years ago</label>
                </value>
                <value>
                    <fullName>TC4</fullName>
                    <label>Over 5 years ago</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Market_Focus__c</fullName>
        <description>Market Focus - Leisure vs Corporate</description>
        <inlineHelpText>Market Focus - Leisure vs Corporate</inlineHelpText>
        <label>Market Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MF1</fullName>
                    <label>Leisure - 1 to 25%</label>
                </value>
                <value>
                    <fullName>MF2</fullName>
                    <label>Leisure - 25 to 50%</label>
                </value>
                <value>
                    <fullName>MF3</fullName>
                    <label>Leisure - 50 to 75%</label>
                </value>
                <value>
                    <fullName>MF4</fullName>
                    <label>Leisure - over 75%</label>
                </value>
                <value>
                    <fullName>MC1</fullName>
                    <label>Corporate - 1 to 25%</label>
                </value>
                <value>
                    <fullName>MC2</fullName>
                    <label>Corporate - 25 to 50%</label>
                </value>
                <value>
                    <fullName>MC3</fullName>
                    <label>Corporate - 50 to 75%</label>
                </value>
                <value>
                    <fullName>MC4</fullName>
                    <label>Corporate - over 75%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Market_Specialization_Comment__c</fullName>
        <label>Market Specialization Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASF_Market_Specialization__c</fullName>
        <description>What is you market specialization</description>
        <inlineHelpText>What is you market specialization</inlineHelpText>
        <label>Market Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Adventure</label>
                </value>
                <value>
                    <fullName>CE</fullName>
                    <label>Conference / Exhibitions</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>CR</fullName>
                    <label>Cruises</label>
                </value>
                <value>
                    <fullName>ED</fullName>
                    <label>Educational</label>
                </value>
                <value>
                    <fullName>ET</fullName>
                    <label>Ethnic</label>
                </value>
                <value>
                    <fullName>FT</fullName>
                    <label>Family Travel</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>Fitness/Health</label>
                </value>
                <value>
                    <fullName>GE</fullName>
                    <label>General</label>
                </value>
                <value>
                    <fullName>HD</fullName>
                    <label>Handicapped</label>
                </value>
                <value>
                    <fullName>HC</fullName>
                    <label>Historical/ Cultural</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>Incentive</label>
                </value>
                <value>
                    <fullName>LQ</fullName>
                    <label>LGBTQ</label>
                </value>
                <value>
                    <fullName>MC</fullName>
                    <label>Medical Travel</label>
                </value>
                <value>
                    <fullName>MI</fullName>
                    <label>Military</label>
                </value>
                <value>
                    <fullName>RE</fullName>
                    <label>Religious</label>
                </value>
                <value>
                    <fullName>RB</fullName>
                    <label>Resort/Beaches</label>
                </value>
                <value>
                    <fullName>RT</fullName>
                    <label>Romance Travel</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>Safari</label>
                </value>
                <value>
                    <fullName>SE</fullName>
                    <label>Seniors</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <label>Singles</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Sports</label>
                </value>
                <value>
                    <fullName>WT</fullName>
                    <label>Wellness Travel</label>
                </value>
                <value>
                    <fullName>OT</fullName>
                    <label>Other: Please Specify</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Percentage_of_Annual_Booking__c</fullName>
        <description>Percentage of annual bookings by sector</description>
        <inlineHelpText>Percentage of annual bookings by sector</inlineHelpText>
        <label>Percentage of Annual Booking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>BA1</fullName>
                    <label>Air Travel - 1 to 25%          </label>
                </value>
                <value>
                    <fullName>BA2</fullName>
                    <label>Air Travel - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BA3</fullName>
                    <label>Air Travel - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BA4</fullName>
                    <label>Air Travel - over 75%</label>
                </value>
                <value>
                    <fullName>BL1</fullName>
                    <label>Land Travel - 1 to 25%</label>
                </value>
                <value>
                    <fullName>BL2</fullName>
                    <label>Land Travel - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BL3</fullName>
                    <label>Land Travel - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BL4</fullName>
                    <label>Land Travel - over 75%</label>
                </value>
                <value>
                    <fullName>BC1</fullName>
                    <label>Sea/Cruise - 1 to 25%</label>
                </value>
                <value>
                    <fullName>BC2</fullName>
                    <label>Sea/Cruise - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BC3</fullName>
                    <label>Sea/Cruise - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BC4</fullName>
                    <label>Sea/Cruise - over 75%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Specializing_on_Destination__c</fullName>
        <description>Are you specializing on a Destination?</description>
        <inlineHelpText>Are you specializing on a Destination?</inlineHelpText>
        <label>Specializing on Destination</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>South America</label>
                </value>
                <value>
                    <fullName>EY</fullName>
                    <label>Europe</label>
                </value>
                <value>
                    <fullName>ME</fullName>
                    <label>Middle East</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>OC</fullName>
                    <label>Oceania</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Accreditation_Class__c</fullName>
        <description>Agency Accreditation Class taken from the related GDP Account View</description>
        <formula>GDP_Products_Account_View__r.Accreditation_Class__c</formula>
        <inlineHelpText>Agency Accreditation Class taken from the related GDP Account View</inlineHelpText>
        <label>Agency Accreditation Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_IATA_Code__c</fullName>
        <label>Agency IATA Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_ISO_Country_Code__c</fullName>
        <description>ISO Country Code taken from the related GDP Account View</description>
        <formula>GDP_Products_Account_View__r.Country_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ISO Country Code taken from the related GDP Account View</inlineHelpText>
        <label>Agency ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Status__c</fullName>
        <description>Agency Accreditation Status taken from the related GDP Account View</description>
        <formula>GDP_Products_Account_View__r.Agency_Status__c</formula>
        <inlineHelpText>Agency Accreditation Status taken from the related GDP Account View</inlineHelpText>
        <label>Agency Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approving_Manager_s_Email__c</fullName>
        <label>Approving Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approving_Manager_s_Name__c</fullName>
        <label>Approving Manager&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIN__c</fullName>
        <description>Unique CIN/TCIN number of the card</description>
        <label>CIN</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Code__c</fullName>
        <label>Card Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TACB</fullName>
                </value>
                <value>
                    <fullName>TACT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Status__c</fullName>
        <label>Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preapproved</fullName>
                </value>
                <value>
                    <fullName>Cancelled ID Card</fullName>
                </value>
                <value>
                    <fullName>Expired ID Card</fullName>
                </value>
                <value>
                    <fullName>Sent ID Card</fullName>
                </value>
                <value>
                    <fullName>Valid ID Card</fullName>
                </value>
                <value>
                    <fullName>ERROR Picture Missing</fullName>
                </value>
                <value>
                    <fullName>ERROR Rejected by G&amp;D</fullName>
                </value>
                <value>
                    <fullName>ERROR Missing Information</fullName>
                </value>
                <value>
                    <fullName>ID Card Pending/In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>plastic</fullName>
                    <default>true</default>
                    <label>Plastic</label>
                </value>
                <value>
                    <fullName>digital</fullName>
                    <label>Digital</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Variation_Code__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>Card Variation Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Variation__c</fullName>
        <label>Card Variation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duties__c</fullName>
        <label>Duties</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duty_Code__c</fullName>
        <formula>CASE(Duties__c, 
&quot;*CNV DATA* NONE&quot;,&quot;-&quot;, 
&quot;ADMINISTRATION&quot;,&quot;A&quot;, 
&quot;Administration&quot;,&quot;A&quot;, 
&quot;INSIDE SALES&quot;,&quot;I&quot;, 
&quot;SALES&quot;,&quot;I&quot;, 
&quot;Sales&quot;,&quot;I&quot;, 
&quot;OUTSIDE SALES&quot;,&quot;X&quot;, 
&quot;LECTURER&quot;,&quot;L&quot;, 
&quot;MEMBERSHIP SUPPORT&quot;,&quot;M&quot;, 
&quot;SALES/MARKETING&quot;,&quot;N&quot;, 
&quot;MARKETING&quot;,&quot;N&quot;, 
&quot;Marketing&quot;,&quot;N&quot;, 
&quot;ACCOUNTING&quot;,&quot;O&quot;, 
&quot;Accounting&quot;,&quot;O&quot;, 
&quot;RESERVATIONS&quot;,&quot;R&quot;, 
&quot;Reservations&quot;,&quot;R&quot;, 
&quot;CUSTOMER SERVICE&quot;,&quot;S&quot;, 
&quot;Customer Services&quot;,&quot;S&quot;, 
&quot;TOUR GUIDE&quot;,&quot;T&quot;, 
&quot;OTHER DUTIES&quot;,&quot;V&quot;, 
&quot;Other Duties&quot;,&quot;V&quot;, 
&quot;OPERATIONS&quot;,&quot;O&quot;, 
&quot;Operations&quot;,&quot;O&quot;, 
&quot;WRITER&quot;,&quot;W&quot;, 
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_Agency_Name__c</fullName>
        <description>EBC Agency Name taken from the related GDP Account View</description>
        <formula>GDP_Products_Account_View__r.EBC_Agency_Name__c</formula>
        <inlineHelpText>EBC Agency Name taken from the related GDP Account View. Displays Agency Trading Name OR Legal Name IF Trading Name is Blank.</inlineHelpText>
        <label>EBC Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee_Applicable__c</fullName>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDP Products - Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FEMALE</fullName>
                </value>
                <value>
                    <fullName>MALE</fullName>
                    <label>Male</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HourWorkedCode__c</fullName>
        <formula>CASE( Hours_per_week__c , 
&quot;35 H OR MORE&quot;,&quot;1&quot;,
&quot;35 h or more&quot;,&quot;1&quot;,
&quot;35 HOURS OR OVER&quot;,&quot;1&quot;,
&quot;25 TO 34 HOURS&quot;,&quot;2&quot;,
&quot;25-34 h&quot;,&quot;2&quot;,
&quot;25-34 H&quot;,&quot;2&quot;,
&quot;20 TO 24 HOURS&quot;,&quot;3&quot;,
&quot;20-24 h&quot;,&quot;3&quot;,
&quot;20-24 H&quot;,&quot;3&quot;,
&quot;Less than 20 h&quot;,&quot;4&quot;,
&quot;LESS THAN 20 H&quot;,&quot;4&quot;,
&quot;LESS THAN 20 HOURS&quot;,&quot;4&quot;, 
&quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HourWorkedCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_per_week__c</fullName>
        <label>Hours per week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDCard_Key_Account__c</fullName>
        <description>Indicates if the Agent benefits from ID Card Key Account Conditions. Lookup on &quot;IDCard Key Account&quot; from related GDP Product Account View.</description>
        <formula>GDP_Products_Account_View__r.IDCard_Key_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the Agent benefits from ID Card Key Account Conditions. Lookup on &quot;IDCard Key Account&quot; from related GDP Product Account View.</inlineHelpText>
        <label>IDCard Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest ID Card Application</label>
        <referenceTo>ID_Card_Application__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active_Card__c</fullName>
        <description>Check if the card is active</description>
        <formula>IF
(
RecordType.DeveloperName = &apos;AIMS&apos; ,
AND
(
Valid_From_Date__c &lt;= TODAY(),
Valid_To_Date__c &gt; TODAY(),
ISNULL(Cancellation_Date__c)
)
,
IF
(
ISPICKVAL(Card_Status__c, &apos;Cancelled ID Card&apos;),
FALSE,
(
IF(TODAY()&lt;= Valid_To_Date__c, TRUE,FALSE)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON_WS_Complex__c</fullName>
        <description>CAC Web Service Complex Response for IDCard</description>
        <formula>&quot;\&quot;reason\&quot;:\&quot;&quot;+ IF (Json_Is_Active__c, &quot;VALID&quot;, &quot;INVALID&quot;) + &quot;\&quot;,&quot;+
&quot;\&quot;cardholder-name\&quot;:\&quot;&quot;+ FirstName__c +&quot; &quot;+ LastName__c + &quot;\&quot;,&quot;+
&quot;\&quot;card-expiry-date\&quot;:\&quot;&quot;+ TEXT(Month(Valid_To_Date__c))+ &quot;-&quot; +TEXT(Day(Valid_To_Date__c))+ &quot;-&quot; +TEXT(Year(Valid_To_Date__c)) + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-code\&quot;:\&quot;&quot;+Agency_IATA_Code__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-name\&quot;:\&quot;&quot;+EBC_Agency_Name__c + &quot;\&quot;&quot;</formula>
        <inlineHelpText>CAC Web Service Complex Response for IDCard</inlineHelpText>
        <label>JSON WS Complex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_WS_IDCard_App__c</fullName>
        <description>CAC Web Service Response for IDCard App</description>
        <formula>&quot;\&quot;reason\&quot;:\&quot;&quot;+ IF (Json_Is_Active__c, &quot;VALID&quot;, &quot;INVALID&quot;) + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-first-name\&quot;:\&quot;&quot;+ FirstName__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-last-name\&quot;:\&quot;&quot;+ LastName__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-idcard-name\&quot;:\&quot;&quot;+ Name_on_ID_Card__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;card-expiry-date\&quot;:\&quot;&quot;+ TEXT(Month(Valid_To_Date__c))+ &quot;-&quot; +TEXT(Day(Valid_To_Date__c))+ &quot;-&quot; +TEXT(Year(Valid_To_Date__c)) + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-code\&quot;:\&quot;&quot;+Agency_IATA_Code__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-name\&quot;:\&quot;&quot;+EBC_Agency_Name__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-key-account\&quot;:\&quot;&quot;+IF(IDCard_Key_Account__c, &quot;True&quot;, &quot;False&quot;) + &quot;\&quot;,&quot;+
&quot;\&quot;agency-country-iso\&quot;:\&quot;&quot;+Agency_ISO_Country_Code__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-photo\&quot;:\&quot;&quot;+Photo__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;card-type\&quot;:\&quot;&quot;+TEXT(Type_of_ID_Card__c) + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-gender\&quot;:\&quot;&quot;+TEXT(Gender__c) + &quot;\&quot;,&quot;+ 
&quot;\&quot;weekly-hours\&quot;:\&quot;&quot;+Hours_per_week__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-duties\&quot;:\&quot;&quot;+Duties__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;cardholder-position\&quot;:\&quot;&quot;+Position__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;industry-start-year\&quot;:\&quot;&quot;+Start_Date_Industry__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-start-year\&quot;:\&quot;&quot;+Start_Date_Agency_Year__c + &quot;\&quot;,&quot;+ 
&quot;\&quot;agency-start-month\&quot;:\&quot;&quot;+Start_Date_Agency_Month__c + &quot;\&quot;&quot;</formula>
        <inlineHelpText>CAC Web Service Response for IDCard App</inlineHelpText>
        <label>JSON WS IDCard App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Json_Is_Active__c</fullName>
        <description>Is Active according the new conditions Valid Date To and The Card Status not Cancelled</description>
        <formula>IF (
       AND(Valid_To_Date__c = TODAY(),
           NOT(OR (
                   ISPICKVAL(Card_Status__c, &apos;Cancelled ID Card&apos;),
                   ISPICKVAL(Card_Status__c, &apos;Cancelled&apos;)
                  )
              )
         )
, True, False)</formula>
        <inlineHelpText>Is Active according the new conditions Valid Date To and The Card Status not Cancelled</inlineHelpText>
        <label>Json Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Json_WS_Simple__c</fullName>
        <description>CAC Web Service Simple Response for IDCard</description>
        <formula>&quot;\&quot;reason\&quot;:\&quot;&quot;
+ IF (Json_Is_Active__c, &quot;VALID&quot;, &quot;INVALID&quot;) + &quot;\&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CAC Web Service Simple Response for IDCard</inlineHelpText>
        <label>Json WS Simple</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Information__c</fullName>
        <description>This field is to be used for logging the errors encountered due to missing information on the ID Card, while trying to generate the CIN or trying to send the card for printing.</description>
        <label>Missing Information</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MustSyncWithAIMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that indicates whether the information should be synchronized with AIMS.</description>
        <label>Must Send to Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_on_ID_Card__c</fullName>
        <label>Name on ID Card</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_ID_Card__c</fullName>
        <label>Nature of ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Reissue</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Now_Date__c</fullName>
        <description>Date Auto-Populated Formula used to validate EBC Daily Master Sync</description>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date  Auto-Populated Formula used to validate EBC Daily Master Sync</inlineHelpText>
        <label>Now Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>FOC / Key Account</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo_Flag__c</fullName>
        <label>Photo Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                    <default>true</default>
                    <label>Digital</label>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>No-photo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>